# vibradev-py

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
app/api/v1/: api.py  auth.py
app/core/: limiter.py
fastapi-chart/: Chart.yaml  values.yaml
fastapi-chart/templates/: argo_iu.yaml  deployment.yaml  fastapi-cm.yaml  service.yaml
modules/: application_calls.py
