[project]
name = "langgraph-fastapi-gym-chatbot"
version = "0.1.0"
description = "gym chatbot built with langgraph and fastapi"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Vibradev", email = "bayzel@vibradev.com" },
]
dependencies = [
    "fastapi==0.115.12",
    "fastapi-cli==0.0.7",
    "langchain>=0.3.22",
    "langchain-openai>=0.3.11",
    "langfuse>=2.60.2",
    "langgraph>=0.3.21",
    "langgraph-checkpoint-postgres>=2.0.19",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]==2.10.6",
    "pydantic-settings>=2.8.1",
    "python-dotenv==1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart==0.0.20",
    "sqlmodel>=0.0.24",
    "structlog>=25.2.0",
    "supabase>=2.15.0",
    "uvicorn==0.34.0",
    "bcrypt>=4.3.0",
    "slowapi==0.1.9",
    "email-validator==2.2.0",
    "prometheus-client>=0.19.0",
    "starlette-prometheus>=0.7.0",
    "asgiref>=3.8.1",
    "duckduckgo-search>=3.9.0",
    "langchain-community>=0.3.20",
    "tqdm>=4.67.1",
    "colorama>=0.4.6",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.1.31",
    "click==8.1.8",
    "deprecated==1.2.18",
    "distlib==0.3.9",
    "dnspython==2.7.0",
    "filelock==3.18.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "limits==5.0.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "packaging==24.2",
    "platformdirs==4.3.7",
    "pydantic-core==2.27.2",
    "pygments==2.19.1",
    "pyyaml==6.0.2",
    "rich==13.9.4",
    "rich-toolkit==0.13.2",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "starlette==0.46.1",
    "typer==0.15.2",
    "typing-extensions==4.12.2",
    "uv==0.6.15",
    "uvloop==0.21.0",
    "virtualenv==20.29.3",
    "watchfiles==1.0.4",
    "websockets>=11.0.0",
    "wrapt==1.17.2",
]

